<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.libraryloan.screens.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="italic"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#60ffffff"
                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:text="@={viewModel.loginModel.email}"
                android:hint="@string/username"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_layout"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#30ffffff"
                android:drawableStart="@drawable/ic_baseline_key_24"
                android:drawablePadding="20dp"
                android:text="@={viewModel.loginModel.password}"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_alignLeft="@+id/registrationbtn"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="login"
                android:padding="20dp"
                android:text="@string/loginbtn"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registrationbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_alignRight="@+id/loginbtn"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="goToNextPage"
                android:padding="20dp"
                android:paddingHorizontal="12dp"
                android:text="@string/registrationbtn"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</layout>