<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.addNewBook.AddNewBook">

    <data>

        <import type="android.view.View" />

        <variable
            name="isImageAvailable"
            type="Boolean" />

        <variable
            name="viewModel"
            type="com.example.libraryloan.screens.addNewBook.AddNewBookViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addbook_text"
                android:textColor="#ff6750a4"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_title">

                <EditText
                    android:id="@+id/title_edit_text"
                    android:background="#60ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={viewModel.addNewModel.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/author_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <EditText
                    android:id="@+id/author_edit_text"
                    android:background="#60ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={viewModel.addNewModel.author}" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/isbn_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_layout">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/isbn_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#60ffffff"
                    android:hint="@string/isbn"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={viewModel.addNewModel.isbn}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantity_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isbn_layout">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/quantity_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#60ffffff"
                    android:hint="@string/quantity"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:text="@={viewModel.addNewModel.quantity}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/image_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_layout">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/image_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/click_to_add_image"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.addNewModel.bookImage}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_image_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="fill_horizontal|center_vertical"
                android:orientation="horizontal"
                android:visibility="@{isImageAvailable ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_layout">

                <ImageView
                    android:id="@+id/product_image_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="Product image" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pub_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_image_container">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/published_Date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/published_date"
                    android:focusable="false"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:text="@={viewModel.addNewModel.publishedDate}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pub_date_layout">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/category_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:imeOptions="actionDone"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@={viewModel.addNewModel.category}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loanPeriod_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_layout">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/loanPeriod_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Loan Period"
                    android:imeOptions="actionDone"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@={viewModel.addNewModel.loanPeriod}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/save_newbook"
                app:layout_constraintTop_toBottomOf="@+id/loanPeriod_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>