<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/addBook_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Update Book"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addBook_text"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/book1"
            />

        <LinearLayout
            android:id="@+id/isbn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookImage"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="7"
                android:text="@string/isbn"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/isbn"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/isbn_layout"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="7"
                android:text="Title" />

            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/title"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/author_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_layout"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textview_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="7"
                android:text="@string/author" />

            <EditText
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/author"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/publisheddate_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author_layout"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textview_publishedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="7"
                android:text="@string/published_date" />

            <EditText
                android:id="@+id/publishedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/published_date"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/publisheddate_layout"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textview_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="7"
                android:text="@string/category" />

            <EditText
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/published_date"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_layout"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="7"
                android:text="@string/isbn"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/isbn"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_layout"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/cancelUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CANCEL"
                android:textSize="15dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/save_newbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:textSize="15dp"
                android:textStyle="bold"
                android:padding="20dp"
                android:paddingHorizontal="10dp"/>

        </LinearLayout>

    </RelativeLayout>

</layout>